<resources>
    <string name="app_name">Tipper</string>

    <!-- Activity titles -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="title_activity_show_group">Show Group</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="title_activity_create_tip">Create Tip</string>
    <string name="title_activity_search_tip">Search Tip</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about">About</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1444872489140228</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">LOG IN WITH FACEBOOK</string>

    <!-- Toast messages -->
    <string name="toast_main_back_pressed">Press back again to exit.</string>

    <!-- Menu titles -->
    <string name="menu_add">Add</string>
    <string name="menu_search">Search</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_my_groups">My groups</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_map">Map</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>

    <!-- EditText hints -->
    <string name="hint_create_group_name">Group name</string>
    <string name="hint_create_group_description">Group description</string>
    <string name="hint_create_tip_title">Title</string>
    <string name="hint_create_tip_description">Description (optional)</string>
    <string name="hint_search_tip_location">Location</string>
    <string name="hint_search_tip_keyword">Keyword (optional)</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_login_reenter_password">Re-enter password</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_search_location">Search location</string>
    <string name="search_hint">Search groups</string>

    <!-- RadioButton text -->
    <string name="rb_text_create_group_closed">Closed group</string>
    <string name="rb_text_create_group_open">Open group</string>
    <string name="rb_text_food">FOOD</string>
    <string name="rb_text_drinks">DRINKS</string>
    <string name="rb_text_other">OTHER</string>

    <!-- Button text -->
    <string name="b_text_create">CREATE</string>
    <string name="b_text_search">SEARCH</string>
    <string name="b_text_login">LOG IN</string>
    <string name="b_text_sigup">SIGN UP</string>
    <string name="b_text_leave_group">LEAVE GROUP</string>
    <string name="b_text_join_group">JOIN GROUP</string>
    <string name="b_text_ok">OK</string>

    <!-- TextView text -->
    <string name="tv_text_create_tip_price">Price: 0 AUD</string>
    <string name="tv_text_create_tip_note">NOTE: If the group set is a private group, this tip will only be visible for members of the group.</string>
    <string name="tv_text_create_tip_repeat">Repeat</string>
    <string name="tv_text_create_tip_group">Group</string>
    <string name="tv_text_create_tip_start_date">Start:</string>
    <string name="tv_text_create_tip_end_date">End:</string>
    <string name="tv_text_create_tip_date_format">dd-mm-yyyy</string>
    <string name="tv_text_create_tip_time_format">hh:mm</string>
    <string name="tv_text_my_profile_username">Username:</string>
    <string name="tv_text_my_profile_email">Email:</string>
    <string name="tv_text_search_categories">Categories:</string>
    <string name="tv_text_search_max_price">Max price: $50</string>
    <string name="tv_text_login_forgot">Forgot password?</string>
    <string name="tv_text_name">Name</string>
    <string name="tv_text_location">Location</string>
    <string name="tv_text_title">Title</string>
    <string name="tv_text_price">Price</string>

    <!-- ContentDescription -->
    <string name="ib_description">ImageButton</string>
    <string name="iv_description">ImageView</string>

</resources>
