<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="kstr14.tipper.Activities.ShowTipActivity">

    <item android:id="@+id/share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <!-- items in menu overflow -->
    <item android:id="@+id/profile"
        android:title="@string/menu_my_profile"/>
    <item android:id="@+id/groups"
        android:title="@string/menu_my_groups"/>
    <item android:id="@+id/favourites"
        android:title="@string/menu_favourites"/>
    <item android:id="@+id/main_menu_logout"
        android:title="@string/menu_log_out"/>
    <item android:id="@+id/about"
        android:title="@string/menu_about"/>
</menu>
