<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kstr14.tipper.Activities.CreateGroupActivity">

    <item android:id="@+id/camera"
        android:title="@string/menu_camera"
        android:icon="@drawable/ic_action_camera"
        app:showAsAction="always"/>

    <!-- items in menu overflow -->
    <item android:id="@+id/profile"
        android:title="@string/menu_my_profile"/>
    <item android:id="@+id/groups"
        android:title="@string/menu_my_groups"/>
    <item android:id="@+id/favourites"
        android:title="@string/menu_favourites"/>
    <item android:id="@+id/main_menu_logout"
        android:title="@string/menu_log_out"/>
</menu>
