<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="kstr14.tipper.Activities.CreateTipActivity"
    android:id="@+id/relativeLayout">

    <EditText
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createTip_ed_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_create_tip_title"
        android:textColorHint="@color/accent" />

    <EditText
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/createTip_ed_description"
        android:layout_below="@+id/createTip_ed_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_create_tip_description"
        android:textColorHint="@color/accent"
        android:layout_alignRight="@+id/createTip_ed_title"
        android:layout_alignEnd="@+id/createTip_ed_title" />

    <Button
        style="@style/buttonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/b_text_create"
        android:id="@+id/createTip_b_create"
        android:onClick="createTip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createTip_sb_price"
        android:layout_below="@+id/createTip_rg_categories"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_text_create_tip_price"
        android:id="@+id/createTip_tv_price"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/createTip_sb_price" />

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tv_text_create_tip_note"
        android:id="@+id/createTip_tv_info"
        android:layout_below="@+id/createTip_ll_group"
        android:layout_alignParentStart="true"
        android:textSize="12sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createTip_ll_endDate"
        android:layout_alignParentStart="true"
        android:id="@+id/createTip_ll_repeat"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_create_tip_repeat"
            android:id="@+id/createTip_tv_repeatHead"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/createTip_s_repeatStyle"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createTip_ll_repeat"
        android:id="@+id/createTip_ll_group"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_create_tip_group"
            android:id="@+id/createTip_tv_groupHead"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/createTip_s_groupChoice"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createTip_tv_price"
        android:layout_centerHorizontal="true"
        android:id="@+id/createTip_ll_startDate"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_text_create_tip_start_date"
            android:id="@+id/createTip_tv_startDateHead"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            style="@style/text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_text_create_tip_date_format"
            android:id="@+id/createTip_tv_startDate"
            android:textSize="15sp" />

        <TextView
            style="@style/text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_text_create_tip_time_format"
            android:id="@+id/createTip_tv_startTime"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createTip_ll_startDate"
        android:layout_centerHorizontal="true"
        android:id="@+id/createTip_ll_endDate">

        <TextView
            style="@style/text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_text_create_tip_end_date"
            android:id="@+id/createTip_tv_endDateHead"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            style="@style/text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_text_create_tip_date_format"
            android:id="@+id/createTip_tv_endDate"
            android:textSize="15sp" />

        <TextView
            style="@style/text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_text_create_tip_time_format"
            android:id="@+id/createTip_tv_endTime"
            android:textSize="15sp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createTip_rg_categories"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/createTip_ed_description"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_text_food"
            android:id="@+id/createTip_rb_food"
            android:checked="true"
            android:textColor="@color/primary" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_text_drinks"
            android:id="@+id/createTip_rb_drinks"
            android:checked="false"
            android:textColor="@color/primary" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_text_other"
            android:id="@+id/createTip_rb_other"
            android:checked="false"
            android:textColor="@color/primary" />
    </RadioGroup>

</RelativeLayout>
