<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="kstr14.tipper.Activities.SignUpFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/app_logo"
            android:layout_gravity="center_horizontal|top"
            android:layout_width="262dp"
            android:layout_height="122dp"
            android:src="@drawable/tipper"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/iv_description"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <EditText
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/usernameSignupFragment"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_login_username"
                android:textColorHint="@color/accent"
                android:textColor="@color/accent" />

            <EditText
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailSignupFragment"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_login_email"
                android:textColorHint="@color/accent"
                android:textColor="@color/accent" />

            <EditText
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordSignupFragment"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/accent"
                android:hint="@string/hint_login_password"
                android:textColor="@color/accent" />

            <EditText
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/reenterPasswordSignupFragment"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/accent"
                android:hint="@string/hint_login_reenter_password"
                android:textColor="@color/accent" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/b_text_sigup"
        android:id="@+id/signupButtonSignupFragment"
        android:textColor="#ffffffff"
        android:background="@color/accent"
        android:onClick="signupPressed"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="150dp" />

</FrameLayout>
