<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kstr14.tipper.Activities.DefaultLoginFragment"
    android:id="@+id/content">

    <!-- login form -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/app_logo"
            android:layout_gravity="center_horizontal|top"
            android:layout_width="262dp"
            android:layout_height="122dp"
            android:src="@drawable/tipper"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/iv_description"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <EditText
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/usernameDefaultLoginFragment"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_login_username"
                android:textColorHint="@color/accent"
                android:textColor="@color/accent" />

            <EditText
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordDefaultLoginFragment"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/accent"
                android:hint="@string/hint_login_password"
                android:textColor="@color/accent" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/buttonLinearLayout"
                android:weightSum="1"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/b_text_login"
                    android:id="@+id/loginButtonDefaultLoginFragment"
                    android:layout_weight="0.27"
                    android:textColor="#ffffffff"
                    android:background="@color/accent"
                    android:layout_marginRight="20dp"
                    android:onClick="defaultLoginPressed" />

                <Button
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/b_text_sigup"
                    android:id="@+id/signUpDefaultLoginFragment"
                    android:layout_weight="0.86"
                    android:textColor="#ffffffff"
                    android:background="@color/accent"
                    android:layout_marginLeft="20dp"
                    android:onClick="defaultSignUpPressed" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_login_forgot"
                android:id="@+id/forgotPasswordButtonDefaultLoginFragment"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_weight="0.06" />



        </LinearLayout>


<!--
        <Button
            android:id="@+id/twitter_login"
            style="@style/ParseLoginUI.Button.ThirdPartyLogin"
            android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
            android:background="@drawable/com_parse_ui_twitter_login_button_background"
            android:drawableLeft="@drawable/com_parse_ui_twitter_login_logo"
            android:text="@string/com_parse_ui_twitter_login_button_label"
            android:visibility="gone" />

-->
    </LinearLayout>

</FrameLayout>